@@ -1146,17 +1146,6 @@ literal|27
 case|:
 if|if
 condition|(
-operator|(
-literal|0x84002f0600000000L
-operator|&
-name|l
-operator|)
-operator|==
-literal|0L
-condition|)
-break|break;
-if|if
-condition|(
 name|kind
 operator|>
 literal|21
@@ -1242,17 +1231,6 @@ literal|31
 case|:
 if|if
 condition|(
-operator|(
-literal|0x84002f0600000000L
-operator|&
-name|l
-operator|)
-operator|==
-literal|0L
-condition|)
-break|break;
-if|if
-condition|(
 name|kind
 operator|>
 literal|18
@@ -1293,16 +1271,6 @@ break|break;
 case|case
 literal|34
 case|:
-if|if
-condition|(
-operator|(
-literal|0x84002f0600000000L
-operator|&
-name|l
-operator|)
-operator|!=
-literal|0L
-condition|)
 name|jjCheckNAddStates
 argument_list|(
 literal|10
@@ -1361,7 +1329,7 @@ case|:
 if|if
 condition|(
 operator|(
-literal|0x97ffffff97ffffffL
+literal|0x97ffffff87ffffffL
 operator|&
 name|l
 operator|)
@@ -1387,6 +1355,7 @@ literal|26
 argument_list|)
 expr_stmt|;
 block|}
+elseif|else
 if|if
 condition|(
 name|curChar
@@ -1407,7 +1376,7 @@ case|:
 if|if
 condition|(
 operator|(
-literal|0x97ffffff97ffffffL
+literal|0x97ffffff87ffffffL
 operator|&
 name|l
 operator|)
@@ -1438,6 +1407,20 @@ if|if
 condition|(
 name|curChar
 operator|==
+literal|92
+condition|)
+name|jjCheckNAddStates
+argument_list|(
+literal|13
+argument_list|,
+literal|15
+argument_list|)
+expr_stmt|;
+elseif|else
+if|if
+condition|(
+name|curChar
+operator|==
 literal|126
 condition|)
 block|{
@@ -1463,7 +1446,7 @@ block|}
 if|if
 condition|(
 operator|(
-literal|0x97ffffff97ffffffL
+literal|0x97ffffff87ffffffL
 operator|&
 name|l
 operator|)
@@ -1489,20 +1472,6 @@ literal|26
 argument_list|)
 expr_stmt|;
 block|}
-if|if
-condition|(
-name|curChar
-operator|==
-literal|92
-condition|)
-name|jjCheckNAddStates
-argument_list|(
-literal|13
-argument_list|,
-literal|15
-argument_list|)
-expr_stmt|;
-elseif|else
 if|if
 condition|(
 name|curChar
@@ -1807,7 +1776,7 @@ case|:
 if|if
 condition|(
 operator|(
-literal|0x97ffffff97ffffffL
+literal|0x97ffffff87ffffffL
 operator|&
 name|l
 operator|)
@@ -1839,7 +1808,7 @@ case|:
 if|if
 condition|(
 operator|(
-literal|0x97ffffff97ffffffL
+literal|0x97ffffff87ffffffL
 operator|&
 name|l
 operator|)
@@ -1887,17 +1856,6 @@ literal|27
 case|:
 if|if
 condition|(
-operator|(
-literal|0x6800000078000000L
-operator|&
-name|l
-operator|)
-operator|==
-literal|0L
-condition|)
-break|break;
-if|if
-condition|(
 name|kind
 operator|>
 literal|21
@@ -1920,7 +1878,7 @@ case|:
 if|if
 condition|(
 operator|(
-literal|0x97ffffff97ffffffL
+literal|0x97ffffff87ffffffL
 operator|&
 name|l
 operator|)
@@ -1952,7 +1910,7 @@ case|:
 if|if
 condition|(
 operator|(
-literal|0x97ffffff97ffffffL
+literal|0x97ffffff87ffffffL
 operator|&
 name|l
 operator|)
@@ -2000,17 +1958,6 @@ literal|31
 case|:
 if|if
 condition|(
-operator|(
-literal|0x6800000078000000L
-operator|&
-name|l
-operator|)
-operator|==
-literal|0L
-condition|)
-break|break;
-if|if
-condition|(
 name|kind
 operator|>
 literal|18
@@ -2033,7 +1980,7 @@ case|:
 if|if
 condition|(
 operator|(
-literal|0x97ffffff97ffffffL
+literal|0x97ffffff87ffffffL
 operator|&
 name|l
 operator|)
@@ -2068,16 +2015,6 @@ break|break;
 case|case
 literal|34
 case|:
-if|if
-condition|(
-operator|(
-literal|0x6800000078000000L
-operator|&
-name|l
-operator|)
-operator|!=
-literal|0L
-condition|)
 name|jjCheckNAddStates
 argument_list|(
 literal|10
@@ -2187,6 +2124,9 @@ literal|36
 case|:
 case|case
 literal|25
+case|:
+case|case
+literal|27
 case|:
 if|if
 condition|(
@@ -2400,6 +2340,9 @@ break|break;
 case|case
 literal|29
 case|:
+case|case
+literal|31
+case|:
 if|if
 condition|(
 operator|!
@@ -2437,6 +2380,9 @@ expr_stmt|;
 break|break;
 case|case
 literal|32
+case|:
+case|case
+literal|34
 case|:
 if|if
 condition|(
